// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header isn't borked 1`] = `
<nav
  className=""
>
  <button
    aria-label="Toggle menu"
    className="undefined mobile"
    onClick={[Function]}
  >
    <img
      alt=""
      src="/static/icons/menu-white.png"
    />
  </button>
  <ul>
    <li>
      <a
        className="nounderline"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        asher foster
      </a>
    </li>
    <span
      className="flex"
    />
    <li>
      <a
        href="/about"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        about
      </a>
    </li>
    <li>
      <a
        href="/portfolio"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        portfolio
      </a>
    </li>
    <li>
      <a
        href="/experimentlist"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        experiments
      </a>
    </li>
    <li>
      <a
        href="/contact"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        contact
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Name doesn't show when hidden 1`] = `
<nav
  className=""
>
  <button
    aria-label="Toggle menu"
    className="undefined mobile"
    onClick={[Function]}
  >
    <img
      alt=""
      src="/static/icons/menu-white.png"
    />
  </button>
  <ul>
    <span
      className="flex"
    />
    <li>
      <a
        href="/about"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        about
      </a>
    </li>
    <li>
      <a
        href="/portfolio"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        portfolio
      </a>
    </li>
    <li>
      <a
        href="/experimentlist"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        experiments
      </a>
    </li>
    <li>
      <a
        href="/contact"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        contact
      </a>
    </li>
  </ul>
</nav>
`;
